--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@ html,body{
   place-items: center;
   /* background: -webkit-linear-gradient(left, #003366,#004080,#0059b3
 , #0073e6); */
-background-image: url(/imagess/ai-generated-7926621_1920.jpg);
+background-image: url("./imagess/ai-generated-7926621_1920.jpg");
 }
 ::selection{
   background: #1a75ff;
