--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="/imagess/logo-no-background.png" alt="Sumo Arts Logo">
+      <img src="./imagess/logo-no-background.png" alt="Sumo Arts Logo">
     </div>
     <nav>
       <ul>
@@ -34,13 +34,13 @@
       </div>
       <div class="images">
         <div class="image">
-          <img src="/imagess/download (1).jfif" alt="Feature Image">
+          <img src="./imagess/download (1).jfif" alt="Feature Image">
         </div>
         <div class="image">
-          <img src="/imagess/download (2).jfif" alt="Feature Image 2">
+          <img src="./imagess/download (2).jfif" alt="Feature Image 2">
         </div>
         <div class="image">
-          <img src="/imagess/a black and white drawing of a woman.jpeg" alt="Feature Image 3">
+          <img src="./imagess/a black and white drawing of a woman.jpeg" alt="Feature Image 3">
         </div>
       </div>
     </div>
@@ -73,31 +73,31 @@
     <div class="gallery" id="gallery12">
       <div class="card">
         <h1 class="cardTitle">Card 1</h1>
-        <img src="/imagess/IMG-20240418-WA0014 - Copy.jpg" alt="" />
+        <img src="./imagess/IMG-20240418-WA0014 - Copy.jpg" alt="" />
       </div>
       <div class="card">
         <h1 class="cardTitle">Card 2</h1>
-        <img src="/imagess/IMG-20240418-WA0021 - Copy.jpg" alt="" />
+        <img src="./imagess/IMG-20240418-WA0021 - Copy.jpg" alt="" />
       </div>
       <div class="card">
         <h1 class="cardTitle">Card 3</h1>
-        <img src="/imagess/IMG-20240418-WA0022.jpg" alt="" />
+        <img src="./imagess/IMG-20240418-WA0022.jpg" alt="" />
       </div>
       <div class="card">
         <h1 class="cardTitle">Card 4</h1>
-        <img src="/imagess/IMG-20240418-WA0030.jpg" alt="" />
+        <img src="./imagess/IMG-20240418-WA0030.jpg" alt="" />
       </div>
       <div class="card">
         <h1 class="cardTitle">Card 5</h1>
-        <img src="imagess/IMG-20240418-WA0031_1 - Copy.jpg" alt="" />
+        <img src="./imagess/IMG-20240418-WA0031_1 - Copy.jpg" alt="" />
       </div>
       <div class="card">
         <h1 class="cardTitle">Card 6</h1>
-        <img src="/imagess/IMG-20240418-WA0035_1.jpg" alt="" />
+        <img src="./imagess/IMG-20240418-WA0035_1.jpg" alt="" />
       </div>
       <div class="card">
         <h1 class="cardTitle">Card 7</h1>
-        <img src="imagess/IMG-20240418-WA0036.jpg" alt="" />
+        <img src="./imagess/IMG-20240418-WA0036.jpg" alt="" />
       </div>
     </div>
     <button type="button" id="GalleryMaker">Make your own Gallery!</button>
