--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     document.getElementById("GalleryMaker").addEventListener("click", (ev) => {
       ev.preventDefault();
       console.log(window.location);
-      window.open(window.location.origin+"/js-pinterest-clone-main/final_board.html");
+      window.open(window.location.href+"/js-pinterest-clone-main/final_board.html");
     });
     const cards = [...document.getElementsByClassName("card")];
     console.log(cards);
