--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
       <p class="desc">The friendly support crew is hungry for your questions!</p>
       <div class="supportCard">
         <h2 class="title">Support</h2>
-        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p class="desc" As you conclude your journey through Sumo's Gallery, I extend my heartfelt gratitude for your presence</p>
         <button class="lulla">Purchase</button>
       </div>
       <div class="supportCard">
         <h2 class="title">Support</h2>
-        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p class="desc">Each stroke, each creation, is a piece of my soul shared with you. Thank you for embracing my artistry. Until we meet again, may inspiration guide your path..</p>
         <button class="lulla">Purchase</button>
       </div>
     </div>
