--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <p class="desc">The friendly support crew is hungry for your questions!</p>
       <div class="supportCard">
         <h2 class="title">Support</h2>
-        <p class="desc" As you conclude your journey through Sumo's Gallery, I extend my heartfelt gratitude for your presence</p>
+        <p class="desc"> As you conclude your journey through Sumo's Gallery, I extend my heartfelt gratitude for your presence</p>
         <button class="lulla">Purchase</button>
       </div>
       <div class="supportCard">
