--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <button class="lulla">Purchase</button>
       </div>
       <div class="supportCard">
-        <h2 class="title">Support</h2>
+        <h2 class="title">Thanks for the visit</h2>
         <p class="desc">Each stroke, each creation, is a piece of my soul shared with you. Thank you for embracing my artistry. Until we meet again, may inspiration guide your path..</p>
         <button class="lulla">Purchase</button>
       </div>
