--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="#cnt">Home</a></li>
         <li><a href="#gallery12">View Arts</a></li>
-        <li><a href="https://www.instagram.com/mrsum0/" target="_blank">Contact Us</a></li>
+        <li><a href="#contact">Contact Us</a></li>
         <li><a href="https://www.instagram.com/sumodraws7/" target="_blank">Order Now</a></li>
         <li><a href="login.html" target="_blank">Login</a></li>
 
@@ -64,57 +64,94 @@
       Create with love, receive with joy, pay with your smile 
     </div>
     <video autoplay muted loop id="bg-video">
-    <source src="700_F_630391640_SGo69410yXZ2WJeWfNj7MYVj0ytts4sT_ST.mp4" type="video/mp4">
+    <source src="91562-629172467_small.mp4" type="video/mp4">
     Your browser does not support the video tag....
     </video>
     
 
     <!-- image gallery -->
     <div class="gallery" id="gallery12">
-      <div class="card">
-        <h1 class="cardTitle">Card 1</h1>
+      <div class="cardiB">
+        <h1 class="cardTitle">SANJU</h1>
         <img src="/imagess/IMG-20240418-WA0014 - Copy.jpg" alt="" />
       </div>
-      <div class="card">
-        <h1 class="cardTitle">Card 2</h1>
+      <div class="cardiB">
+        <h1 class="cardTitle">DAYAN </h1>
         <img src="/imagess/IMG-20240418-WA0021 - Copy.jpg" alt="" />
       </div>
-      <div class="card">
-        <h1 class="cardTitle">Card 3</h1>
+      <div class="cardiB">
+        <h1 class="cardTitle">BHEDIYA</h1>
         <img src="/imagess/IMG-20240418-WA0022.jpg" alt="" />
       </div>
-      <div class="card">
-        <h1 class="cardTitle">Card 4</h1>
+      <div class="cardiB">
+        <h1 class="cardTitle">UDAASNI</h1>
         <img src="/imagess/IMG-20240418-WA0030.jpg" alt="" />
       </div>
-      <div class="card">
-        <h1 class="cardTitle">Card 5</h1>
+      <div class="cardiB">
+        <h1 class="cardTitle">MR.HASSU</h1>
         <img src="imagess/IMG-20240418-WA0031_1 - Copy.jpg" alt="" />
       </div>
-      <div class="card">
-        <h1 class="cardTitle">Card 6</h1>
+      <div class="cardiB">
+        <h1 class="cardTitle">MRS.KUKI</h1>
         <img src="/imagess/IMG-20240418-WA0035_1.jpg" alt="" />
       </div>
-      <div class="card">
-        <h1 class="cardTitle">Card 7</h1>
+      <div class="cardiB">
+        <h1 class="cardTitle">CHUDAIL</h1>
         <img src="imagess/IMG-20240418-WA0036.jpg" alt="" />
       </div>
+      <div class="cardiB">
+        <h1 class="cardTitle">BACHAAO</h1>
+        <img src="imagess/IMG_20240419_000041_985.jpg" alt="" />
+      </div>
+      <div class="cardiB">
+        <h1 class="cardTitle">JAI HO!</h1>
+        <img src="imagess/IMG_20240419_000014_834.jpg" alt="" />
+      </div>
+      <div class="cardiB">
+        <h1 class="cardTitle">MRS.NUN</h1>
+        <img src="imagess/IMG_20240419_000135_103.jpg" alt="" />
+      </div>
+      <div class="cardiB">
+        <h1 class="cardTitle">BHOLA</h1>
+        <img src="imagess/IMG_20240419_001949_560.jpg" alt="" />
+      </div>
+      <div class="cardiB">
+        <h1 class="cardTitle">CHIPKU</h1>
+        <img src="imagess/IMG_20240418_235925_309.jpg" alt="" />
+      </div>
+      <div class="cardiB">
+        <h1 class="cardTitle">TAKLA</h1>
+        <img src="imagess/IMG_20240419_002339_395.jpg" alt="" />
+      </div>
+      <div class="cardiB">
+        <h1 class="cardTitle">GUFFY</h1>
+        <img src="imagess/IMG_20240419_002451_870.jpg" alt="" />
+      </div>
+      <div class="cardiB">
+        <h1 class="cardTitle">SOMU</h1>
+        <img src="imagess/IMG_20240419_002150_552.jpg" alt="" />
+      </div>
+
+      <!-- end of the gallery -->
     </div>
     <button type="button" id="GalleryMaker">Make your own Gallery!</button>
     <div id="container">
-      <h2 class="title">Thanks SumoArts: Where Creativity Knows No Bounds!</h2>
-      <p class="desc">The friendly support crew is hungry for your questions!</p>
+      <h2 class="title">SumoArts: Where Creativity Knows No Bounds!</h2>
+      <p class="desc">The friendly creator is hungry for your questions!</p>
       <div class="supportCard">
         <h2 class="title">Support</h2>
-        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <button class="lulla">Purchase</button>
+        <p class="desc">As you conclude your journey through Sumo's Gallery, I extend my heartfelt gratitude for your presence .</p>
+        <button class="puppy"><a href="https://www.instagram.com/sumodraws7/" target="_blank">Purchase</a></button>
       </div>
       <div class="supportCard">
-        <h2 class="title">Support</h2>
-        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <button class="lulla">Purchase</button>
+        <h2 class="title">Thanks for the visit</h2>
+        <p class="desc"> Each stroke, each creation, is a piece of my soul shared with you. Thank you for embracing my artistry. Until we meet again, may inspiration guide your path.</p>
+        <button class="puppy"><a href="https://www.instagram.com/sumodraws7/" target="_blank">Purchase</a></button>
       </div>
     </div>
+    <p class="desc" id="contact">Contact Us:-</p>
+    <p class="contact">7719432195</p>
+    <p class="contact email">sksumitboss123@gmail.com</p>
   </main>
   <footer class= "text-center" style="background-color: #343a40; opacity: 0.8;">
     <!-- Grid container -->
@@ -131,7 +168,7 @@
         <a
           data-mdb-ripple-init
           class="btn text-white btn-floating m-1"
-          style="background-color: #ac2bac;"
+          style="background-color: #7d1e70;"
           href="https://www.instagram.com/sumodraws7/"
           role="button"
           ><i class="fa fa-instagram"></i
@@ -150,13 +187,14 @@
       <!-- Section: Social media -->
     </div>
     <!-- Grid container -->
-  
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05); color: white">
-      © 2020 Copyright:
+      © 2024 Copyright:
       sksumitboss123@gmail.com
+      No Chori Chakari..
     </div>
     <!-- Copyright -->
+
   </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -166,7 +204,7 @@
     // initMDB({ Ripple });
     document.getElementById("GalleryMaker").addEventListener("click", (ev) => {
       ev.preventDefault();
-      window.open("file:///C:/Users/USER/OneDrive/Desktop/Node%20js%20and%20Front%20End%20Project/js-pinterest-clone-main/js-pinterest-clone-main/final_board.html");
+      window.open("js-pinterest-clone-main/final_board.html");
     });
     const cards = [...document.getElementsByClassName("card")];
     console.log(cards);
@@ -186,6 +224,7 @@
         console.log("unscaled");
       });
     });
+
   </script>
 </body>
 </html>
