--- a/index.html
+++ b/index.html
@@ -75,27 +75,27 @@
         <h1 class="cardTitle">SANJU</h1>
         <img src="/imagess/IMG-20240418-WA0014 - Copy.jpg" alt="" />
       </div>
-      <div class="card">
+      <div class="cardiB">
         <h1 class="cardTitle">Card 2</h1>
         <img src="/imagess/IMG-20240418-WA0021 - Copy.jpg" alt="" />
       </div>
-      <div class="card">
+      <div class="cardiB">
         <h1 class="cardTitle">Card 3</h1>
         <img src="/imagess/IMG-20240418-WA0022.jpg" alt="" />
       </div>
-      <div class="card">
+      <div class="cardiB">
         <h1 class="cardTitle">Card 4</h1>
         <img src="/imagess/IMG-20240418-WA0030.jpg" alt="" />
       </div>
-      <div class="card">
+      <div class="cardiB">
         <h1 class="cardTitle">Card 5</h1>
         <img src="imagess/IMG-20240418-WA0031_1 - Copy.jpg" alt="" />
       </div>
-      <div class="card">
+      <div class="cardiB">
         <h1 class="cardTitle">Card 6</h1>
         <img src="/imagess/IMG-20240418-WA0035_1.jpg" alt="" />
       </div>
-      <div class="card">
+      <div class="cardiB">
         <h1 class="cardTitle">Card 7</h1>
         <img src="imagess/IMG-20240418-WA0036.jpg" alt="" />
       </div>
