--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <img src="imagess/IMG-20240418-WA0014 - Copy.jpg" alt="" />
       </div>
       <div class="cardiB">
-        <h1 class="cardTitle">DAIYAN</h1>
+        <h1 class="cardTitle">DAYAN</h1>
         <img src="imagess/IMG-20240418-WA0021 - Copy.jpg" alt="" />
       </div>
       <div class="cardiB">
