frontend and backend project

--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
 
       <!-- end of the gallery -->
     </div>
+    <div class="makky">
     <button type="button" id="GalleryMaker">Make your own Gallery!</button>
+    </div>
     <div id="container">
       <h2 class="title">SumoArts: Where Creativity Knows No Bounds!</h2>
       <p class="desc">The friendly creator is hungry for your questions!</p>
@@ -171,8 +173,7 @@
           style="background-color: #7d1e70;"
           href="https://www.instagram.com/sumodraws7/"
           role="button"
-          ><i class="fa fa-instagram"></i
-        ></a>
+          ><i class="fa fa-instagram"></i></a>
   
         <!-- Linkedin -->
         <!-- Github -->
